[package]
name = "mscp"
authors = ["hoping <baihaoping@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fern = { version = "0.7", features = ["reopen-03"] }
log = "0.4"
libc = "0.2"
cfg-if = "1.0"
chrono = "0.4"
tokio = {version = "1.41", features = ["fs", "rt", "rt-multi-thread", "macros", "io-util"] }
